@@ -144,10 +144,23 @@ You can also run xboxdrv automatically whenever you plug in a gamepad via:
  % tools/xboxdrv-daemon.py
 
 The script assumes that xboxdrv is available from PATH and that hal
-and dbus are available.
+and dbus are available. You can pass arguments to xboxdrv after a
+double dash '--':
 
-Note that you lose most of the configurabilty when you launch it
-automatically, so this isn't recomment. 
+ % tools/xboxdrv-daemon.py -- --buttonmap B=A,X=A,Y=A
+
+You can also run scripts that get started after xboxdrv is started
+via:
+
+ % tools/xboxdrv-daemon.py --attach /home/juser/xboxdrv_attach \
+                           --detach /home/juser/xboxdrv_deatach
+
+This is useful in Kiosk settings, such as a media center PC, where you
+might want to restart the media center to have the controller working
+properly after it got attached.
+
+Note that you lose some of the configurabilty when you launch it
+automatically via the daemon, so this isn't generally recomment.
 
 When you want configurability and automatic launching, it is recomment
 that you write little startup scripts for your games, such as this:
